vendor/vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcheaderfieldpolicy-17.warc
WARC/1.0
WARC-Type: metadata
WARC-Date: 2008-04-30T20:48:25Z
WARC-Record-ID: <urn:uuid:35f02b38-eb19-4f0d-86e4-bfe95815069c-1>
Content-Length: 483
Content-Type: application/warc-fields
WARC-Concurrent-To: <urn:uuid:35f02b38-eb19-4f0d-86e4-bfe95815069c-2>
WARC-Concurrent-To: <urn:uuid:35f02b38-eb19-4f0d-86e4-bfe95815069c-3>
WARC-Concurrent-To: <urn:uuid:35f02b38-eb19-4f0d-86e4-bfe95815069c-4>

